--- a/External/style.css
+++ b/External/style.css
@@ -486,3 +486,32 @@ button:active {
     height: 105%;
   }
 }
+#inputBox::placeholder {
+  color: #eda3a3;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .calculator {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 576px) {
+  .calculator {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 546px) {
+  .calculator {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+  }
+  #inputBox {
+    font-size: 20px;
+  }
+  .calculator button {
+    width: 50px;
+    height: 50px;
+    font-size: 14px;
+  }
+}
