--- a/External/style.css
+++ b/External/style.css
@@ -458,7 +458,9 @@ button:active {
 @media screen and (max-width: 768px) {
   .calculator {
     width: 80%;
-    overflow-y: hidden;
+  }
+  body{
+    overflow: hidden;
   }
 }
 
@@ -466,7 +468,6 @@ button:active {
   .calculator {
     width: 95%;
     margin: 5px;
-    overflow-y: hidden;
   }
 }
 
@@ -475,7 +476,6 @@ button:active {
     width: 100%;
     height: 100%;
     margin: 5px;
-    overflow-y: hidden;
   }
   #inputBox {
     font-size: 30px;
@@ -487,7 +487,6 @@ button:active {
   .calculator {
     width: 106%;
     height: 105%;
-    overflow-y: hidden;
   }
 }
 #inputBox::placeholder {
@@ -497,7 +496,6 @@ button:active {
 @media screen and (max-width: 768px) {
   .calculator {
     width: 90%;
-    overflow-y: hidden;
   }
 }
 @media screen and (max-width: 576px) {
@@ -511,7 +509,6 @@ button:active {
     width: 100%;
     height: auto;
     padding: 10px;
-    overflow-y: hidden;
   }
   #inputBox {
     font-size: 20px;
