--- a/External/style.css
+++ b/External/style.css
@@ -469,6 +469,9 @@ button:active {
     width: 95%;
     margin: 5px;
   }
+  body{
+    overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 546px) {
@@ -481,12 +484,18 @@ button:active {
     font-size: 30px;
     width: 100%;
   }
+  body{
+    overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 235px) {
   .calculator {
     width: 106%;
     height: 105%;
+  }
+  body{
+    overflow: hidden;
   }
 }
 #inputBox::placeholder {
@@ -497,11 +506,17 @@ button:active {
   .calculator {
     width: 90%;
   }
+  body{
+    overflow: hidden;
+  }
 }
 @media screen and (max-width: 576px) {
   .calculator {
     width: 95%;
     overflow-y: hidden;
+  }
+  body{
+    overflow: hidden;
   }
 }
 @media screen and (max-width: 546px) {
@@ -517,5 +532,8 @@ button:active {
     width: 50px;
     height: 50px;
     font-size: 14px;
+  }
+  body{
+    overflow: hidden;
   }
 }
